etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Mon Jan 16 19:44:21 2017
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate INVALID -m comment --comment "Drop invalid packets" -j DROP
-A PREROUTING -p tcp -m tcp --dport 22 -j DROP -m comment --comment "DROP Default SSH Port as early as possible"
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "Drop TCP packets that are new and are not SYN" -j DROP
-A PREROUTING -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -m comment --comment "Drop SYN packets with suspicious MSS value" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,URG URG -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags PSH,ACK PSH -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,PSH,URG -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -m comment --comment "Block packets with bogus TCP flags" -j DROP
-A PREROUTING -s 224.0.0.0/3 -i eth0 -m comment --comment "Block spoofed packets from private networks on eth0" -j DROP
-A PREROUTING -s 169.254.0.0/16 -i eth0 -m comment --comment "Block spoofed packets from private networks on eth0" -j DROP
-A PREROUTING -s 172.16.0.0/12 -i eth0 -m comment --comment "Block spoofed packets from private networks on eth0" -j DROP
-A PREROUTING -s 192.0.2.0/24 -i eth0 -m comment --comment "Block spoofed packets from private networks on eth0" -j DROP
-A PREROUTING -s 192.168.0.0/16 -i eth0 -m comment --comment "Block spoofed packets from private networks on eth0" -j DROP
-A PREROUTING -s 10.0.0.0/8 -i eth0 -m comment --comment "Block spoofed packets from private networks on eth0" -j DROP
-A PREROUTING -s 0.0.0.0/8 -i eth0 -m comment --comment "Block spoofed packets from private networks on eth0" -j DROP
-A PREROUTING -s 240.0.0.0/4 -m comment --comment "Block class E packets." -j DROP
-A PREROUTING -s 127.0.0.0/8 ! -i lo -m comment --comment "Block spoofed localhost packets" -j DROP

-A PREROUTING -d 255.255.255.255/32 -i eth0 -p udp --dport 68 --sport 67 -m comment --comment "Drop dhcp on external interface eth0" -j DROP
-A PREROUTING -i eth0 -p tcp --dport 445 -m comment --comment "Drop SMB from external interface eth0" -j DROP
-A PREROUTING -i eth0 -p udp --dport 1900 -m comment --comment "Drop SSDP from external interface eth0" -j DROP
COMMIT
# Completed on Mon Jan 16 19:44:21 2017
# Generated by iptables-save v1.4.21 on Mon Jan 16 19:44:21 2017
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon Jan 16 19:44:21 2017
# Generated by iptables-save v1.4.21 on Mon Jan 16 19:44:21 2017
*filter
:OUTPUT DROP [0:0]
:FORWARD DROP [0:0]
:LOGDROP - [0:0]
:LOGACCEPT - [0:0]
:LOGREJECT - [0:0]
:INPUT DROP [0:0]
-A INPUT -i ve-+ -p udp --dport 67:68 --sport 67:68 -m comment --comment "Allow DHCP-Requests from Containers" -j LOGACCEPT
-A INPUT -p tcp -m tcp -m state -m comment --dport 22 --state ESTABLISHED -j LOGACCEPT --comment "SSH Server"
-A INPUT -p udp -m udp -m state -m comment --sport 123 --state RELATED,ESTABLISHED -j LOGACCEPT --comment "ntp client"
-A INPUT -p tcp -m multiport -m state -m comment --state ESTABLISHED -j LOGACCEPT --sports 80,443 --comment Download
-A INPUT -m comment -i lo -j LOGACCEPT --comment "Allow loopback"
-A INPUT -p icmp -m icmp -m limit -m comment --icmp-type 8 -j LOGACCEPT --comment "Allow ping"
-A INPUT -p icmp -m icmp --icmp-type 0 -j LOGACCEPT
-A INPUT -p udp -m udp -m comment --sport 53 -j LOGACCEPT --comment "Allow DNS request from this server"
-A INPUT -p tcp -m tcp -m comment --sport 53 -j LOGACCEPT --comment "Allow DNS request from this server"
-A INPUT -p tcp -m tcp -m state --dport 1024:65535 --sport 1024:65535 --state ESTABLISHED -j LOGACCEPT
-A INPUT -p tcp -m tcp -m comment -s 91.189.89.49/32 --sport 11371 -j LOGACCEPT --comment "PGP Key Server"
-A INPUT -p tcp -m tcp -m comment -s 91.189.90.55/32 --sport 11371 -j LOGACCEPT --comment "PGP Key Server"

-A FORWARD -o eth0 -i ve-+ -j LOGACCEPT
-A FORWARD -o ve-+ -i eth0 -j LOGACCEPT

-A OUTPUT -o ve-+ -p udp --dport 67:68 --sport 67:68 -m comment --comment "Allow DHCP-Requests from Containers" -j LOGACCEPT
-A OUTPUT -p tcp -m tcp -m state -m comment --sport 22 --state ESTABLISHED -j LOGACCEPT --comment "SSH Server"
-A OUTPUT -p udp -m udp -m state -m comment --dport 123 --state NEW,ESTABLISHED -j LOGACCEPT --comment "ntp client"
-A OUTPUT -p tcp -m multiport -m state -m comment --state NEW,ESTABLISHED -j LOGACCEPT --dports 80,443 --comment Download
-A OUTPUT -m comment -o lo -j LOGACCEPT --comment "Allow loopback"
-A OUTPUT -p icmp -m icmp -m comment --icmp-type 0 -j LOGACCEPT --comment "Allow ping"
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j LOGACCEPT
-A OUTPUT -p udp -m udp -m comment --dport 53 -j LOGACCEPT --comment "Allow DNS request from this server"
-A OUTPUT -p tcp -m tcp -m comment --dport 53 -j LOGACCEPT --comment "Allow DNS request from this server"
-A OUTPUT -p tcp -m tcp -m comment -d 91.189.89.49/32 --dport 11371 -j LOGACCEPT --comment "PGP Key Server"
-A OUTPUT -p tcp -m tcp -m comment -d 91.189.90.55/32 --dport 11371 -j LOGACCEPT --comment "PGP Key Server"

-A INPUT -j LOGDROP
-A FORWARD -j LOGDROP
-A OUTPUT -j LOGDROP

-A LOGDROP -j LOG  --log-prefix "iptables: [DROP] "
-A LOGDROP -j DROP

-A LOGACCEPT -j LOG --log-prefix "iptables: [ACCEPT] "
-A LOGACCEPT -j ACCEPT

-A LOGREJECT -j LOG  --log-prefix "iptables: [REJECT] "
-A LOGREJECT -j REJECT

COMMIT
# Completed on Mon Jan 16 19:44:21 2017
